2020-01-14 7.00d  David Carlisle
    * Test for newer GhostScript releases in dvips output
      https://tex.stackexchange.com/a/524163/1090

2019-11-10  7,00c David Carlisle
   * adjust vtex guards for issue #108

2019-11-06  David Carlisle
   * don't load hobsub-hyperref,ifpdf,ifluatex,ifxetex,ifvtex
     do load new iftex

2019-10-03  David Carlisle
   * xr-hyper update to match xr

2019-09-28 6.88j Ulrike Fischer
   * reverted fix for issue #97 to solve issue #103

2019-09-28 David Carlisle
   * repository moved to https://github.com/latex3/hyperref

2019-09-27 6.88j Ulrike Fischer
   * corrected default values of fields with non-ascii, issue #49
   * changed default height/width of formfields to
   \normalbaselineskip (issue #84)
   * added definitions for starred \ref,\pageref,\nameref if
     implicit=false is used (issue #100).

2019-09-16 nameref 2.46 Ulrike Fischer
   * added missing test else branch of varioref code.

2019-09-12 6.88i Ulrike Fischer
   * adapted code to new varioref version (suggestions from
     Frank Mittelback

2019-09-12 2.45 nameref.sty Ulrike Fischer
   * adapted code to new varioref version (suggestions from
     Frank Mittelback

2019-06-12 6.88h Ulrike Fischer
   * added code to allow \Hy@DisableOption to escape groups
     https://github.com/latex3/hyperref/issues/97

2019-04-27 6.88g Ulrike Fischer
   * added \mu to psdextra.def
     https://github.com/latex3/hyperref/pull/90
   * removed setting of /Producer from all drivers
     https://github.com/latex3/hyperref/issues/91


2018-12-24 6.88f Ulrike Fischer
   * gobble \thanks in pdftitle
     https://github.com/latex3/hyperref/issues/81

2018-11-30 6.88e Ulrike Fischer
   * added ignorespaces to footnotetext to address
     https://github.com/latex3/oberdiek/issues/50

2018-11-27 6.88d Ulrike Fischer
   * removed wrong producer warning for xetex and (x)dvipdfm(x)
     (issue 76)

2018-11-22 6.88c Ulrike Fischer
   * Added support for pdflinkmargin for xetex (issue 15)
